# RAG_service

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
admin-ui/: assets  index.html
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_users.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  chat.py  collections.py  dashboard.py  deps.py  documents.py  health.py  tenants.py
backend/app/core/: auth.py  conversation.py  encryption.py  jwt_tokens.py  persona.py  site.py  tenant_config.py  tenant_llm.py
backend/app/core/embeddings/: base.py  factory.py  gemini.py  ollama.py  openai.py  sentence_transformers.py
backend/app/core/llm/: anthropic.py  azure_openai.py  base.py  factory.py  gemini.py  ollama.py  openai.py  openai_compatible.py  probe.py
backend/app/core/rag/: confidence.py  hybrid.py  intent.py  query_rewrite.py  reranker.py
backend/app/models/: __init__.py
backend/app/scripts/: seed.py
backend/app/services/: rag_service.py  storage.py
backend/app/workers/: __init__.py  ingestion.py
backend/tests/: conftest.py  test_deploy_auth.py  test_setup_wizard.py
deploy/: Caddyfile  Caddyfile.onprem  docker-compose.onprem.yml  docker-compose.saas.images.yml  docker-compose.saas.local.yml  docker-compose.saas.yml
platform-ui/: Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json  vite.config.ts
rag4all-deploy/: .env.example  README.md  docker-compose.yml
(+75 files in other folders)
