[project]
name = "rag-embed"
version = "0.1.0"
description = "Embeddable RAG microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.0",
    "openai>=1.57.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.3",
    "minio>=7.2.12",
    "arq>=0.26.1",
    "redis>=5.2.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.17",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
